test/corpus/compound_stmts.txt
=======================================
Label, Show, Talk and Hide
=======================================
label talk:
    show e
    e "Line one."
    e happy "Line two."
    "Narration."
    hide e

---------------------------------------

(source_file
    (statement
        (label_stmt
            (LABEL_NAME
                (NAME))
            (block
                (indent)
                (statements
                    (statement
                        (show_stmt
                            (image_spec
                                (NAME)))
                            (newline))
                    (statement
                        (say_dialogue
                            (say_who
                                (NAME))
                            (say_what
                                (STRING)))
                            (newline))
                    (statement
                        (say_dialogue
                            (say_who
                                (NAME))
                            (say_attrs
                                (say_attr
                                    (NAME)))
                            (say_what
                                (STRING)))
                            (newline))
                    (statement
                        (say_narration
                            (say_what
                                (STRING)))
                            (newline))
                    (statement
                        (hide_stmt
                            (image_spec
                                (NAME)))))
                (dedent)))))

=======================================
A Scene With Choices
=======================================
label start:
        
    "Here we see Eileen"

    show e at right
    
    menu:
        
        e "I wonder what I should do..."

        "Go left":
            show e at left with ease
            e "I am at left now"
        
        "Nothing":
            e "I did nothing"

----------------------------------------

(source_file
    (statement
        (label_stmt
            (LABEL_NAME
                (NAME))
            (block
                (indent)
                (statements
                    (statement
                        (say_narration
                            (say_what
                                (STRING)))
                        (newline))
                    (statement
                        (show_stmt
                            (image_spec
                                (NAME)
                                (image_modifier
                                    (at_clause
                                        (simple_expr
                                            (NAME))))))
                        (newline))
                    (statement
                        (menu_stmt
                            (menu_block
                                (indent)
                                (say_dialogue
                                    (say_who
                                        (NAME))
                                    (say_what
                                        (STRING)))
                                (newline)
                                (choice
                                    (say_what
                                        (STRING))
                                    (block
                                        (indent)
                                        (statements
                                            (statement
                                                (show_stmt
                                                    (image_spec
                                                        (NAME)
                                                        (image_modifier
                                                            (at_clause
                                                                (simple_expr
                                                                    (NAME)))))
                                                    (with_clause
                                                        (simple_expr
                                                            (NAME))))
                                                (newline))
                                            (statement
                                                (say_dialogue
                                                    (say_who
                                                        (NAME))
                                                    (say_what
                                                        (STRING)))))
                                        (dedent)))
                                    (choice
                                        (say_what
                                            (STRING))
                                        (block
                                            (indent)
                                            (statements
                                                (statement
                                                    (say_dialogue
                                                        (say_who
                                                            (NAME))
                                                        (say_what
                                                            (STRING)))))
                                                (dedent)))
                                        (dedent)))))
                                    (dedent)))))

    
