test/corpus/simple_label.txt
==========================================
Simple Label
==========================================
label start:
    pass

-----------------------------------------

(source_file
    (statement
        (label_stmt
            (LABEL_NAME
                (NAME))
            (block
                (indent)
                (statements
                    (statement
                        (pass_stmt)))
                (dedent)))))

=========================================
Label with Dotted Name
=========================================
label game.start:
    pass

-----------------------------------------

(source_file
    (statement
        (label_stmt
            (LABEL_NAME
                (NAME)
                (NAME))
            (block
                (indent)
                (statements
                    (statement
                        (pass_stmt)))
                (dedent)))))

=========================================
Label with Hidden Name
=========================================
label .hidden:
    pass

-----------------------------------------

(source_file
    (statement
        (label_stmt
            (LABEL_NAME
                (NAME))
            (block
                (indent)
                (statements
                    (statement
                        (pass_stmt)))
                (dedent)))))
