test/corpus/simple_show.txt
========================================
Simple Show
========================================
show eileen

---------------------------------------

(source_file
    (statement
        (show_stmt
            (image_spec
                (NAME)))
            (newline)))

        
